# uco-vocabulary

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
AccountTypeEnum/: index.html
AccountTypeVocab/: index.html
ActionArgumentNameEnum/: index.html
ActionArgumentNameVocab/: index.html
ActionNameEnum/: index.html
ActionNameVocab/: index.html
ActionRelationshipTypeEnum/: index.html
ActionRelationshipTypeVocab/: index.html
ActionStatusTypeEnum/: index.html
ActionStatusTypeVocab/: index.html
ActionTypeEnum/: index.html
ActionTypeVocab/: index.html
BitnessEnum/: index.html
BitnessVocab/: index.html
Boolean/: index.html
CharacterEncodingEnum/: index.html
CharacterEncodingVocab/: index.html
ContactAddressScopeEnum/: index.html
ContactAddressScopeVocab/: index.html
ContactEmailScopeEnum/: index.html
ContactEmailScopeVocab/: index.html
ContactPhoneEnum/: index.html
ContactPhoneScopeVocab/: index.html
ContactSIPScopeEnum/: index.html
ContactSIPScopeVocab/: index.html
ContactURLScopeEnum/: index.html
ContactURLScopeVocab/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DiskTypeEnum/: index.html
DiskTypeVocab/: index.html
Double/: index.html
EndiannessTypeEnum/: index.html
EndiannessTypeVocab/: index.html
Float/: index.html
HashNameEnum/: index.html
HashNameVocab/: index.html
Integer/: index.html
LibraryTypeEnum/: index.html
LibraryTypeVocab/: index.html
Ncname/: index.html
(+79 files in other folders)
